@@ -1,3 +1,9 @@
+2005-01-31  Alexander Gottwald  <ago at freedesktop dot org>
+
+	* InitOutput.c:
+	resolve SHGetFolderPath dynamicly since it is not available on all Windows 
+	systems.
+
 2005-01-12  Alexander Gottwald  <ago at freedesktop dot org>
 
 	* winmsg.c
